tests-integration/fixtures/checking/219_do_mixed_monad_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
effect :: Effect Int
aff :: Aff String
test :: Effect { a :: Int, b :: String }
test' :: forall (t23 :: Type). Effect (t23 :: Type)

Types

Diagnostics
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 16:8..16:11
   |
16 |   b <- aff
   |        ^~~
error[CannotUnify]: Cannot unify 'Aff ?11[:0]' with 'Effect ?8[:0]'
  --> 16:8..16:11
   |
16 |   b <- aff
   |        ^~~
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 22:8..22:11
   |
22 |   b <- aff
   |        ^~~
error[CannotUnify]: Cannot unify 'Aff ?26[:0]' with 'Effect ?23[:0]'
  --> 22:8..22:11
   |
22 |   b <- aff
   |        ^~~
